docs: update TODO

--- a/inst/app/www/styling.scss
+++ b/inst/app/www/styling.scss
@@ -1,5 +1,5 @@
 /* -------------- Section 1 - Defaults ------------ */
-$main-colour: 'blue';
+$main-colour: #434C5E;
 $main-bgcolour: 'white';
 
 $font-size: 14;
