feat: progress made on tab 1.2; minor ui changes to tab 1.1; minor change to font styles and renaming of one module

--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -1,5 +1,9 @@
 /* -------------- Section 1 - Defaults ------------ */
 /* --------------- Section 2 - Styles -------------- */
+* {
+  font-family: Segoe UI;
+}
+
 .tab-title {
   font-size: 40px;
   color: "black";
