feat: finish first draft of tab 1.2 (minus summary box)

--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -1,7 +1,8 @@
 /* -------------- Section 1 - Defaults ------------ */
 /* --------------- Section 2 - Styles -------------- */
-* {
+p {
   font-family: Segoe UI;
+  font-colour: "black";
 }
 
 .tab-title {
