feat: add content to usingReactivity (reactive vs observe) and tweak styling to slightly larger font

--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -1,6 +1,6 @@
 /* -------------- Section 1 - Defaults ------------ */
 /* --------------- Section 2 - Styles -------------- */
-p {
+p, li {
   font-family: Segoe UI;
   font-colour: "black";
   font-size: 16px;
